[package]
name = "tfocus"
version = "0.1.3"
edition = "2021"
description = "tfocus is a super interactive tool for selecting and executing Terraform plan/apply on specific resources. Think of it as an emergency tool - not for everyday use."
license = "MIT"
repository = "https://github.com/nwiizo/tfocus"
documentation = "https://github.com/nwiizo/tfocus"
homepage = "https://github.com/nwiizo/tfocus"
authors = ["syu.m.5151@gmail.com"]
keywords = ["terraform", "opentofu", "cli", "workspace"]
categories = ["command-line-utilities"]


[dependencies]
walkdir = "2.3"
regex = "1.5"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"
crossterm = "0.27"
fuzzy-matcher = "0.3"
nix = { version = "0.26", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
